# game-classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
data/: dataset_isrelated.json  train.csv
topic-classifier/: classifier.py  test.py
topic_classifier/: __init__.py  __main__.py  classifier.py  classifier_train.py  logging_config.py  onnx_convert.py  test.py  test_from_file.py  translate.py  utils.py
topic_classifier/conf/: config.yaml
