[tool.poetry]
name = "topic-classifier"
version = "0.1.0"
description = "Classifier for dnd rag system"
authors = ["Timik232 <komolov.timurka@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
datasets = "^3.3.2"
hydra-core = "^1.3.2"
wandb = "^0.19.8"
torch = {version = "^2.6.0+cu118", source = "torch-cuda"}
torchvision = {version = "^0.21.0+cu118", source = "torch-cuda"}
accelerate = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
